--- a/public/views/question.html
+++ b/public/views/question.html
@@ -1,38 +1,45 @@
-<div id="question-container-inner">
+<div id="question-container-inner" style="background-color: #f99999; position: relative">
   <div class="card longBlack">
     <span ng-bind-html-unsafe="game.curQuestion.text" ng-hide="game.state === 'game ended' || game.state ==='game dissolved' || game.state === 'awaiting players'"></span>
-
-    <div id="notifications" ng-if="game.notification" ng-animate="{enter:'animated fadeInLeft', leave:'animated fadeOut'}">{{game.notification}}</div>
-
+    <div id="notifications" ng-if="game.notification" ng-animate="{enter:'animated fadeInLeft', leave:'animated fadeOut'}" style="position: absolute; background-color: white; padding: 10px;">{{game.notification}}</div>
     <div id="startGame" ng-show="game.state === 'awaiting players'">
-      <div id="finding-players">Finding Players</div>
-      <div id="player-count-container">
-        <div id="player-count">{{game.players.length}} / 6 </div>
-        <div id="the-word-players"> Players </div>
+      <div id="finding-players"><b>Finding Players</b></div>
+      <div class="row">
+        <div id="player-count-container" class="col m4">
+          <div id="player-count"><b>{{game.players.length}} / 6 </b></div>
+          <div id="the-word-players"> Players </div>
+        </div>
+        <div id="loading-container" class="col m4">
+          <div id="loading-gif" class="valign-wrapper find-players">
+            <img ng-src="../img/loader.gif" class="valign" />
+          </div>
+        </div>
+        <div id="start-game-container" class="col m4" ng-click="startGame()" ng-show="(game.playerIndex === 0 || game.joinOverride) && game.players.length >= game.playerMinLimit">
+          <div class="valign-wrapper find-players">
+          <button class="btn valign white black-text" id='start-game-button'>
+          Play Game<br> with {{game.players.length}} players
+        </button>
+          </div>
+        </div>
       </div>
-      <div id="loading-container">
-        <div id="loading-gif"><img ng-src="../img/loader.gif"/></div>
-      </div>
-      <div id="start-game-container" ng-click="startGame()" ng-show="(game.playerIndex === 0 || game.joinOverride) && game.players.length >= game.playerMinLimit">
-        <div id='start-game-button'>
-          Start Game</br>with {{game.players.length}} players
+      <!--</div>-->
+      <!-- Game Over Stuff -->
+      <div id="game-end-info">
+        <div id="people-left-game-top" ng-show="game.state ==='game dissolved' && game.gameWinner === -1">
+          <div class="game-end-headline">What the!? The game ended because too many people left! </div>
+          Our sincere apologies.
+        </div>
+        <div ng-show="game.state === 'game ended' && game.gameWinner === game.playerIndex">
+          <div class="game-end-headline">Congratulations! You won the game, {{game.players[game.playerIndex].username
+            | upperFirstLetter}}!</div>We hope you feel special. If you'd like to
+          share that special feeling with the world, consider donating to charity.
+          Or just horde it all for youself.
+        </div>
+        <div ng-show="game.state === 'game ended' && game.gameWinner !== game.playerIndex">
+          <div class="game-end-headline">Aw, shucks! {{game.players[game.gameWinner].username | upperFirstLetter
+            }} won the game!</div>
+          That makes you a loser, unfortunately.
         </div>
       </div>
     </div>
-    <!-- Game Over Stuff -->
-    <div id="game-end-info">
-      <div id="people-left-game-top" ng-show="game.state ==='game dissolved' && game.gameWinner === -1">
-        <div class="game-end-headline">What the!? The game ended because too many people left! </div>
-        Our sincere apologies.
-      </div>
-      <div ng-show="game.state === 'game ended' && game.gameWinner === game.playerIndex">
-        <div class="game-end-headline">Congratulations! You won the game, {{game.players[game.playerIndex].username | upperFirstLetter}}!</div>We hope you feel special. If you'd like to share that special feeling with the world, consider donating to charity. Or just horde it all for youself.
-      </div>
-      <div ng-show="game.state === 'game ended' && game.gameWinner !== game.playerIndex">
-        <div class="game-end-headline">Aw, shucks! {{game.players[game.gameWinner].username | upperFirstLetter }} won the game!</div>
-        That makes you a loser, unfortunately.
-      </div>
-    </div>
   </div>
-</div>
-
