--- a/public/views/answers.html
+++ b/public/views/answers.html
@@ -24,7 +24,7 @@
   </div>
   <div id="cards" class='hand'>
     <span ng-show="winnerPicked()"></span>
-    <div ng-style="{'cursor':'pointer'}" class="card smallest" id='answers' ng-click="pickCard(card)" ng-hide="showTable || isCzar()" ng-repeat="card in playersCards" ng-animate="{enter:'animated fadeInUp', leave: 'animated fadeInOut'}">
+    <div ng-style="{'cursor':'pointer'}" class="card smallest" id='answers' ng-click="pickCard(card)" ng-hide="showTable || isCzar()" ng-repeat="card in game.players[game.playerIndex].hand" ng-animate="{enter:'animated fadeInUp', leave: 'animated fadeInOut'}">
       <span ng-bind-html-unsafe="card.text"></span>
       <span id='selection-number' ng-show="showFirst(card)"> 1 </span>
       <span id='selection-number' ng-show="showSecond(card)"> 2 </span>
