(start-game): modal to gaming screen

--- a/public/views/app.html
+++ b/public/views/app.html
@@ -1,4 +1,23 @@
 </script>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <div class="modal-head">
+      <span class="close">&times;</span>
+       <h2><span class="header-text">Welcome..</span></h2>
+    </div>
+    <div class="modal-body">
+      <h4><span class="text">You are about starting a new Game Session... Please click on the Start Game button below</span></h4>
+      <button id="start-game" type="button" class="btn start-btn">Start game</button>
+    </div>
+  </div>
+
+</div>
+
+
 <div id="app-container" ng-controller="GameController">
   <!-- Add home header here-->
   <!-- Fixed Logo & Menu Bar Start -->
@@ -46,3 +65,5 @@
 <answers></answers>
 </div>
 </div>
+
+<script type="text/javascript" src="../js/modal.js"></script>
