feature(start-game): add modal button to start

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1444,3 +1444,56 @@
  .socials_block{
    margin-left: 300px;
  }
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: white;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    color: #002266;
+}
+
+/* The Close Button */
+.close {
+  color: #002266;
+    float: right;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover, .start-btn:hover{
+    color: lightblue;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.start-btn{
+  background-color: #002266;
+  color: white;
+  align-content: center;
+  width: 30%;
+  margin-left: 35%;
+  height: 50px;
+  font-size: 25px;
+
+}
+
+.header-text{
+  margin-left: 35%;
+}
