--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2004,3 +2004,17 @@ iframe{
   overflow:hidden;
 }
 
+iframe{
+  width:100%;
+  height:500px;
+}
+
+#howto img{
+  width:100%;
+}
+
+#howto{
+  width:100%;
+  height:auto;
+  overflow:hidden;
+}
